// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidatorRow /> renders row on Proposals tab 1`] = `
<tr
  className="jsx-4079813474 table-row validator-nodes-row mx-0 "
>
  <td
    className="jsx-1618374794 collapse-row-arrow disable"
    onClick={[Function]}
  >
    <img
      className="jsx-1618374794"
      src="/static/images/icon-maximize.svg"
      style={
        Object {
          "width": "16px",
        }
      }
    />
  </td>
  <td
    className="jsx-1618374794 order"
  >
    1
  </td>
  <td
    className="jsx-1618374794"
  >
    <div
      className="align-items-center row no-gutters"
    >
      <div
        className="validators-node-label col-2"
      >
        <span
          className="validating-label pending badge"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          Pending
        </span>
      </div>
      <div
        className="validator-name col"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text col"
            title="@magic.poolv1.near"
          >
            magic.poolv1.near
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text validator-node-pub-key col"
            title="ed25519:5fwufMXx9CTyLRkz7x3htQa3rFGzFZuz6d43LhCTmKCS"
          >
            ed25519:5fwufMXx9CTyLRkz7x3htQa3rFGzFZuz6d43LhCTmKCS
          </div>
        </div>
      </div>
    </div>
  </td>
  <td
    className="jsx-1618374794"
  >
    100%
  </td>
  <td
    className="jsx-1618374794"
  >
    121
  </td>
  <td
    className="jsx-1618374794 text-right validator-nodes-text stake-text"
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      10,831,273.77981
       
      NEAR
    </span>
  </td>
</tr>
`;

exports[`<ValidatorRow /> renders row on Validators tab 1`] = `
Array [
  <tr
    className="jsx-4079813474 table-row validator-nodes-row mx-0 "
  >
    <td
      className="jsx-1618374794 collapse-row-arrow "
      onClick={[Function]}
    >
      <img
        className="jsx-1618374794"
        src="/static/images/icon-maximize.svg"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </td>
    <td
      className="jsx-1618374794 order"
    >
      1
    </td>
    <td
      className="jsx-1618374794"
    >
      <div
        className="align-items-center row no-gutters"
      >
        <div
          className="validators-node-label col-2"
        >
          <span
            className="validating-label active badge"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            Active
          </span>
        </div>
        <div
          className="validator-name col"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text col"
              title="@dokiacapital.pool.6fb1358"
            >
              dokiacapital.pool.6fb1358
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text validator-node-pub-key col"
              title="ed25519:935JMz1vLcJxFApG3TY4MA4RHhvResvoGwCrQoJxHPn9"
            >
              ed25519:935JMz1vLcJxFApG3TY4MA4RHhvResvoGwCrQoJxHPn9
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      className="jsx-1618374794"
    >
      10%
    </td>
    <td
      className="jsx-1618374794"
    >
      11
    </td>
    <td
      className="jsx-1618374794 text-right validator-nodes-text stake-text"
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        91,037.77039
         
        NEAR
      </span>
    </td>
    <td
      className="jsx-1618374794"
    >
      <div
        className="jsx-1486326988 cumulative-stake-chart"
      >
        <div
          className="jsx-1486326988 total-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1486326988 current-value"
          style={
            Object {
              "width": "100%",
            }
          }
        />
        <div
          className="jsx-1486326988 cumulative-stake-label"
        >
          100
          %
        </div>
      </div>
    </td>
  </tr>,
  <tr
    className="jsx-1618374794 cumulative-stake-holders-row"
  >
    <td
      className="jsx-1618374794 warning-text text-center"
      colSpan={7}
    >
      Validators 1 -
       
      1
       hold a cumulative stake above 33%. Delegating to the validators below improves the decentralization of the network.
    </td>
  </tr>,
]
`;
